k8s/blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swiggy-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: swiggy
      version: blue
  template:
    metadata:
      labels:
        app: swiggy
        version: blue
    spec:
      containers:
      - name: swiggy
        image: ayush1406/swiggy-clone:v1
        ports:
        - containerPort: 80
