k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: swiggy-active
spec:
  type: ClusterIP
  selector:
    app: swiggy
    version: blue
  ports:
    - port: 80
      targetPort: 80
