k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: swiggy-service
spec:
  type: LoadBalancer
  selector:
    app: swiggy
  ports:
    - port: 80
      targetPort: 80
